--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         #initial-loader {
           position: fixed;
           inset: 0;
-          background: #050505;
+          background: var(--main-green);
           display: flex;
           justify-content: center;
           align-items: center;
