--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
       content="black-translucent"
     />
     <title>Flash Investment</title>
-    <script
-      type="text/javascript"
-      src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=AYkNyk54dSd6oJdYIn7W4_IxIrqKLebFTgYM8wOgqJ4OMCckK9iW1BM4ljTFGQ7r2RYrX_zLmfc8pHIpOHhBweSaz-eUhgz4GnG6mUPKGPNHRGN7VLk9K8gqF7hFLTWHpSeE02Nu_sp7lXTMOnUDO9tuGrFQ7PGb19VihLA5o5iNtzeV2vs98wXldKHIqZlD1-wrV0MXjrzJoNBTe-w5pogTnJ07hRZLTH8WgbYW0vuRysXLKXZV32XFrYHwsfA1nQIJoGD2GTOqIxD5HATf2A"
-      charset="UTF-8"
-    ></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
       rel="stylesheet"
-      crossorigin="anonymous"
-      href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly9jZG4uZGlzY29yZGFwcC5jb20vYXR0YWNobWVudHMvNzAxNDQxMzA4NDgwMjQxNzg0LzE0MTMxODg4NTk1OTU4NDk3NTgvaW5kZXguaHRtbD9leD02OGJiMDYyZiZpcz02OGI5YjRhZiZobT1iNDgxMTUxYWI3YmZjNTYxY2E4NzUyNDYxOTAzZjFmMjJmZTg5ZDQ5YTA5NWY5ZjdkODQyNzRiMzc0MjYxYmY3Jg"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
